2.0.11
	+ Added locks to prevent overlapping in ebox-ad-sync script
	+ Fix slave failed operation string on slave hostname
	+ Added indexes for common LDAP attributes
2.0.10
	+ Now the AD synchronization can be disabled at any moment and a
	  server with AD-slave mode can be master for other Zentyal slaves
	+ New /etc/ebox/ad-sync_ignore.users and ad-sync_ignore.groups files
	  to ignore users and groups in the AD synchronization process
	+ Improved zentyal-ldapvi script that works on slave servers
	+ Creates the default group if not exists during restore
	+ Added restore backup precheck to assure there are not conflicts between
	  system users and Zentyal LDAP users (currently only works for masters)
2.0.9
	+ Make sure to create the base directory for user homes before create them
	+ Reconnect to LDAP on backup restore
	+ Better log messages
	+ Save configuration files during restore
	+ Catch possible SIGPIPE on LDAP reconnect
2.0.8
	+ Fix Samba PDC on slaves
	+ Check for incompatibility between Samba PDC and PAM on slaves
	+ Optimize slave-sync script if there are no pending operations
	+ Remove useless call to mode() on slave-sync script (faster now)
	+ Replica LDAP listens in all interfaces
2.0.7
	+ Added index add mechanism to LdapModule
	+ Fixed NSS DN config in masters
2.0.6
	+ Added zentyal-rejoin-slave to rejoin a slave to its master
	+ Fixed NSS/PAM in slave machines
2.0.5
	+ Removed wrong hooks implementation
2.0.4
	+ Fixed infinite recursion when setting up some models on slave servers
	+ Added support for addUser/delUser hooks
2.0.3
	+ Allow LDAP users and groups up to 128 characters
	+ Show precondition message for user corner on slave servers
	+ Unconfigure ftp and zarafa in reinstall script
	+ Do not show adsync debug messages if debug is disabled in config
	+ Allow more than one dot in usernames
2.0.2
	+ Fixed master/slave synchronization issues
	+ Remove userjournal dir when removing a slave